--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytemuck = "1.14.3"
+futures = "0.3.30"
 nannou = "0.19.0"
 nannou_egui = "0.19.0"
+pollster = "0.3.0"
 re_ui = "0.14.1"
